# knightvision

./: .gitignore  .gitmodules  README.org  build.gradle.kts  emulating.md  gradle.properties  local.properties  settings.gradle.kts  test-server.Caddyfile  test-server.Containerfile
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/gui/: MainActivity.kt
app/src/main/java/com/example/gui/ui/screens/: BoardDetectionScreen.kt  ScanBoardScreen.kt  WelcomeScreen.kt
app/src/main/java/com/example/gui/ui/theme/: ChessVisionTheme.kt  Color.kt  Theme.kt  Type.kt
app/src/main/java/com/knightvision/: AnalysisActivity.kt  MainActivity.kt  ServerBridge.kt  StockfishBridge.kt
app/src/main/java/com/knightvision/ui/screens/: AnalyseScreen.kt  BoardDetectionScreen.kt  BoardEditingScreen.kt  ScanBoardScreen.kt  SettingsScreen.kt  WelcomeScreen.kt
app/src/main/java/com/knightvision/ui/theme/: ChessVisionTheme.kt  Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: install-emu.sh  start-emu.sh  test-server.sh
